--- a/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/strings.xml
+++ b/Syntax_Kotlin/Mini_Project_Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Main Menu</string>
+    <string name="login">Login</string>
+    <string name="about">About</string>
+    <string name="quit">Quit</string>
+    <string name="remember_me">Remember me</string>
+    <string name="Password">Password:</string>
+    <string name="password">password</string>
+    <string name="Username">Username:</string>
+    <string name="username">username</string>
+    <string name="show_password">Show password</string>
 </resources>
